2007-11-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* international/titdic-cnv.el (dos-8+3-filename):
	* obsolete/fast-lock.el (msdos-long-file-names):
	* frame.el (msdos-mouse-p):
	* files.el (msdos-long-file-names, w32-long-file-name)
	(msdos-long-file-names):
	* term/mac-win.el (mac-code-convert-string, mac-coerce-ae-data)
	(mac-resume-apple-event, mac-font-panel-mode)
	(mac-atsu-font-face-attributes, mac-ae-set-reply-parameter)
	(mac-clear-font-name-table):
	* term/pc-win.el (msdos-remember-default-colors)
	(w16-set-clipboard-data, w16-get-clipboard-data):
	* term/w32-win.el (w32-send-sys-command, w32-select-font)
	(set-message-beep):
	* net/browse-url.el (w32-shell-execute):
	* w32-fns.el (set-message-beep, w32-get-clipboard-data)
	(w32-get-locale-info, w32-get-valid-locale-ids)
	(w32-set-clipboard-data):
	* dos-fns.el (int86, msdos-long-file-names):
	* dos-w32.el (default-printer-name): Declare as functions.

2007-11-21  Jason Rumney  <jasonr@gnu.org>

	* emacs-lisp/byte-run.el (declare-function): Return nil.

2007-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sh-script.el (sh-mode): Set defun-prompt-regexp.

2007-11-21  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-lpr-switches): Docstring fix.
	(ps-string-list): New fun.
	(ps-do-despool): Code fix.

2007-11-21  Juanma Barranquero  <lekktu@gmail.com>

	* w32-fns.el: Undo 2007-11-21 change by Dan Nicolaescu.

2007-11-21  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/check-declare.el (check-declare-verify): Skip C files
	for now.  Handle define-minor-mode, and defalias (with no argument
	checking).

2007-11-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* frame.el (msdos-mouse-p):
	* files.el (msdos-long-file-names, w32-long-file-name)
	(msdos-long-file-names):
	* term/mac-win.el (mac-code-convert-string, mac-coerce-ae-data)
	(mac-resume-apple-event, mac-font-panel-mode)
	(mac-atsu-font-face-attributes, mac-ae-set-reply-parameter)
	(mac-clear-font-name-table):